--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "mfe/login"]
 	path = mfe/login
 	url = https://github.com/cezarfuhr/primoia-social-profile-fe-login-mfe.git
+	branch = main
