--- a/mfe/agent-demo/angular.json
+++ b/mfe/agent-demo/angular.json
@@ -15,8 +15,11 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-builders/custom-webpack:browser",
           "options": {
+            "customWebpackConfig": {
+              "path": "webpack.config.js"
+            },
             "outputPath": "dist/agent-demo",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -59,7 +62,12 @@
           "defaultConfiguration": "production"
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
+          "builder": "@angular-builders/custom-webpack:dev-server",
+          "options": {
+            "customWebpackConfig": {
+              "path": "webpack.config.js"
+            }
+          },
           "configurations": {
             "production": {
               "buildTarget": "agent-demo:build:production"
