--- a/mfe/agent-demo/nginx.conf
+++ b/mfe/agent-demo/nginx.conf
@@ -9,12 +9,12 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    # Proxy to backend for API calls
-    location /api/ {
-        proxy_pass http://codenoob-social-profile:8080; # Assumindo que o backend está acessível por este nome de serviço
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+    # Proxy to backend for API calls (desabilitado temporariamente)
+    # location /api/ {
+    #     proxy_pass http://codenoob-social-profile-backend:8000;
+    #     proxy_set_header Host $host;
+    #     proxy_set_header X-Real-IP $remote_addr;
+    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #     proxy_set_header X-Forwarded-Proto $scheme;
+    # }
 }
