--- a/mfe/agent-demo/package.json
+++ b/mfe/agent-demo/package.json
@@ -26,6 +26,8 @@
     "@angular-devkit/build-angular": "^17.0.0",
     "@angular/cli": "^17.0.0",
     "@angular/compiler-cli": "^17.0.0",
+    "@angular-architects/module-federation": "^17.0.0",
+    "@angular-builders/custom-webpack": "^17.0.0",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
     "typescript": "~5.2.2"
